# libceu

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Copying.md  Doxyfile  Doxyfile.ini  License.md  Makefile  Makefile.am  Makefile.devel  Readme.md  TODO.md  adj-timestamp.sh  clang-format-all.sh  clang-formatw.sh  clang-tidyw.sh  configure.ac  cppcheckw.sh  devel.mk  fmt.sh  xmake.lua
cmake/: libceu.cmake
cmake_collections/: .gitignore  CMakeLists.txt  enable_debug.cmake  find_or_get_gtest.cmake  get_highest_cxx_std.cmake  git_adapter.cmake  test_armadillo.cmake  test_buildin_types.cmake  test_c11.cmake  test_c89.cmake  test_c99.cmake  test_c__Noreturn.cmake  test_c___attribute__.cmake  test_c__bool.cmake  test_c_bool.cmake  test_c_helloworld.cmake  test_c_inline.cmake  test_c_noreturn.cmake  test_c_opemp.cmake  test_c_pthread.cmake  test_cxx11.cmake  test_cxx98.cmake  test_cxx_helloworld.cmake  test_cxx_pthread.cmake  test_cxx_stdthread.cmake  test_eigen.cmake  test_fortran_helloworld.cmake  test_gtest.cmake  test_libbz2.cmake  test_libdeflate.cmake  test_liblzma.cmake  test_libm.cmake  test_libpthread.cmake  test_libz.cmake  test_link.cmake  test_log4cpp.cmake
cmake_collections/libcmake/: detect_c_preprocessor_macros.cmake  enhanced_find.cmake  enhanced_try_run.cmake  print_test_status.cmake  run_unit_tests.sh
cmake_collections/libcmake/_enhanced_fild_unittest/: CMakeLists.txt
cmake_collections/libcmake/shell/: detect_c_preprocessor_macros.sh
cmake_collections/src/: cst_workload.h  test_armadillo.cpp  test_bool.h  test_c11.c  test_c11_globals.h  test_c89.c  test_c89_globals.h  test_c99.c  test_c99_globals.h  test_c__Noreturn.c  test_c___attribute__.c  test_c___inline.c  test_c___inline__.c  test_c__bool.c  test_c_bool.c  test_c_const.c  test_c_inline.c  test_c_noreturn.c  test_c_noreturn_attribute.c  test_cxx11.cc  test_cxx11_ax_globals.hh  test_cxx11_globals.hh  test_cxx14.cc  test_cxx14_ax_globals.hh  test_cxx17.cc  test_cxx17_ax_globals.hh  test_cxx20.cc  test_cxx20_ax_globals.hh  test_cxx98.cc  test_cxx98_globals.hh  test_eigen.cpp  test_gtest.cpp  test_helloworld.c  test_helloworld.cpp  test_helloworld.f90  test_libbz2.c  test_libdeflate.c  test_liblzma.c  test_libm.c  test_libz.c  (+7 more)
cmake_collections/test_link_proj_shared/: CMakeLists.txt
cmake_collections/test_link_proj_source/: lib.c  main.c  main.h
cmake_collections/test_link_proj_static/: CMakeLists.txt
include/: .gitignore  ceu_c_utils.h  libceu.h  libceu_stddef.h  libceu_stddef.h.in
include/ceu_basic/: ceu_c_utils.h  ceu_fast_macros.h  libceu.h  libceu_stddef.h.in  libceu_stddef_cmake.h.in  libceu_stddef_dispatcher.h  libceu_stddef_xmake.h.in
include/ceu_check/: ceu_append_sprintf.h  ceu_c_utils.h  ceu_check_all.h  ceu_check_c_cxx_std.h  ceu_check_c_cxx_std_macro.h  ceu_check_c_std.h  ceu_check_cc.h  ceu_check_cc_macro.h  ceu_check_ctypes_limit.h  ceu_check_cxx_std.hpp  ceu_check_os.h  ceu_check_os_macro.h  ceu_check_resource_limit.h  ceu_check_utils.h  check_all.h  check_arch.h  check_c_std.h  check_cc.h  check_cxx_std.hpp  check_libc.h  check_os.h  check_resource_limit.h
include/ceu_check/cc/: ceu_cc_amd_clang.h  ceu_cc_clang.h  ceu_cc_edg.h  ceu_cc_gcc.h  ceu_cc_icc.h  ceu_cc_intel_clang.h  ceu_cc_msvc.h  ceu_cc_nvhpc.h  ceu_cc_pgic.h  ceu_cc_tcc.h  ceu_cc_turboc.h  ceu_cc_unknown.h
include/ceu_check/os/: ceu_os_bsd.h  ceu_os_defs.h  ceu_os_helpers.h  ceu_os_mainframe_unix.h  ceu_os_windows.h
include/ceu_cpputils/: ceu_filesystem.hpp  ceu_subprocess.hpp  ceu_users.hpp
include/ceu_cstd/: ceu_assert.h  ceu_cdefs.h  ceu_features.h  ceu_iso646.h  ceu_stdbool.h  ceu_stddef.h  ceu_stdint.h  ceu_stdio.h  ceu_stdnoreturn.h  ceu_string.h
include/ceu_cstd/ceu_stdint/: c_basic_sizes.h  c_minimum_std.h  stdint_failsafe_maxmin.h  stdint_failsafe_typedef.h  stdint_gcc_maxmin.h  stdint_gcc_typedef.h  stdint_msvc_maxmin.h  stdint_printf_conversion.h
include/ceu_posix/: libgen.h
include/ceu_thirdparty/: log.h
include/ceu_w32api/: pstdint.h
include/ceu_ystrlib/: ceu_ystrlib.h  ceu_ystrlib_all.h  ceu_ystrlib_concat.h  ceu_ystrlib_convert.h  ceu_ystrlib_create.h  ceu_ystrlib_gc.h  ceu_ystrlib_int.h
include/w32api/: pstdbool.h  pstdint.h
include_priv/ceu_basic/: libceu_stddef_cmake.h.in  libceu_stddef_xmake.h.in
include_priv/ceu_check/: ceu_check_c_cxx_std.c_cxx.h  ceu_check_helpers.h
include_priv/ceu_check/cc/: ceu_cc_icc.h  ceu_cc_pgic.h
include_priv/ceu_check/os/: ceu_os_bsd.h  ceu_os_mainframe_unix.h  ceu_os_windows.h
include_priv/ceu_cstd/ceu_stdint/: c_basic_sizes.h  c_minimum_std.h  stdint_failsafe_typedef.h  stdint_gcc_maxmin.h
include_priv/ceu_cstd/ceu_stdio/: ceu_printf_core.h
lib/: CMakeLists.txt  ceu_c_utils.c  ceu_check_all.c  ceu_check_c_cxx_std.c  ceu_check_cc.c  ceu_check_ctypes_limit.c  ceu_check_os.c
lib/c/: ceu_check_c_cxx_std.c
lib/ceu_basic/: ceu_c_utils.c  libceu.c
lib/ceu_check/: CMakeLists.txt  ceu_c_utils.c  ceu_check_all.c  ceu_check_cc.c  ceu_check_ctypes_limit.c  ceu_check_helpers.c  ceu_check_os.c  ceu_check_utils.c  misc.c
lib/ceu_check/c/: ceu_check_c_cxx_std.c
lib/ceu_check/cxx/: ceu_check_c_cxx_std.cc  ceu_check_c_cxx_std.cpp
lib/ceu_cpputils/: CMakeLists.txt  ceu_filesystem.cpp  ceu_subprocess.cpp  ceu_users.cpp
lib/ceu_cstd/: ceu_assert.c  ceu_stdio.c  ceu_string.c
lib/ceu_cstd/ceu_stdio/: ceu_printf_core.c
lib/ceu_thirdparty/: log.c
lib/ceu_ystrlib/: ceu_ystrlib_concat.c  ceu_ystrlib_convert.c  ceu_ystrlib_create.c  ceu_ystrlib_gc.c  ceu_ystrlib_int.c
lib/cxx/: ceu_check_c_cxx_std.cpp
tc/: clang.tc.cmake  gcc-5-ar.sh  gcc-5.sh  gcc-5.tc.cmake  riscv.tc.cmake  zig-c++.cmd  zig-c++.sh  zig-cc.sh
test/: CMakeLists.txt  minunit.h  test_ceu_check_c.c  test_ceu_check_cxx.cpp  test_ceu_filesystem.cpp
test/ceu_cstd/: assert_test.c  iso646_test.c  stdbool_test.c  stdint_test.c
test/ceu_cstd/ceu_stdio/: test_printf_core.c
test/ceu_ystrlib/: test_ystr.c
test/misc/: log_test.c  pstdint_test.c  stdint_test.c
