file(GLOB CEU_LIBRARY_SOURCES_SHARED ${CMAKE_CURRENT_LIST_DIR}/*.c ${CMAKE_CURRENT_LIST_DIR}/*/*.c
     ${CMAKE_CURRENT_LIST_DIR}/ceu_cstd/*/*.c)

set(CEU_LIBRARY_SOURCES_C ${CEU_LIBRARY_SOURCES_SHARED} ${CMAKE_CURRENT_LIST_DIR}/ceu_check/c/ceu_check_c_cxx_std.c)

set(CEU_LIBRARY_SOURCES_CXX ${CEU_LIBRARY_SOURCES_SHARED}
                            ${CMAKE_CURRENT_LIST_DIR}/ceu_check/cxx/ceu_check_c_cxx_std.cc)

if(LIBCEU_BUILD_SHARED)
    add_library(${CEU_LIBRARY_SHARED} SHARED ${CEU_LIBRARY_SOURCES_C})
    install(TARGETS ${CEU_LIBRARY_SHARED} TYPE LIBRARY)
endif()

if(LIBCEU_BUILD_STATIC)
    add_library(${CEU_LIBRARY_STATIC} STATIC ${CEU_LIBRARY_SOURCES_C} "ceu_basic/libceu.c")
    install(TARGETS ${CEU_LIBRARY_STATIC} TYPE LIBRARY)
    ceu_cm_set_static_target(${CEU_LIBRARY_STATIC})
endif()

if(LIBCEU_BUILD_SHARED_CXX)
    add_library(${CEU_LIBRARY_SHARED_CXX} SHARED ${CEU_LIBRARY_SOURCES_CXX})
    install(TARGETS ${CEU_LIBRARY_SHARED_CXX} TYPE LIBRARY)
endif()

if(LIBCEU_BUILD_STATIC_CXX)
    add_library(${CEU_LIBRARY_STATIC_CXX} STATIC ${CEU_LIBRARY_SOURCES_CXX} "ceu_basic/libceu.c")
    install(TARGETS ${CEU_LIBRARY_STATIC_CXX} TYPE LIBRARY)
    ceu_cm_set_static_target(${CEU_LIBRARY_STATIC_CXX})
endif()
