include_directories("${CMAKE_CURRENT_LIST_DIR}")

enable_testing()

set(CEU_TEST_LIBRARY_SHARED ${CEU_LIBRARY_SHARED})
set(CEU_TEST_LIBRARY_STATIC ${CEU_LIBRARY_STATIC})

macro(ceu_add_test test_name source_name)
    if(LIBCEU_BUILD_SHARED)
        add_executable("test_ceu_${test_name}_shared" "${source_name}")
        target_link_libraries("test_ceu_${test_name}_shared" ${CEU_TEST_LIBRARY_SHARED})
        add_test(NAME "test_ceu_${test_name}_shared" COMMAND "test_ceu_${test_name}_shared")
        message(STATUS "CEU: Adding test test_ceu_${test_name}_shared")
    endif()
    if(LIBCEU_BUILD_STATIC)
        add_executable("test_ceu_${test_name}_static" "${source_name}")
        target_link_libraries("test_ceu_${test_name}_static" ${CEU_TEST_LIBRARY_STATIC})
        ceu_cm_set_static_target("test_ceu_${test_name}_static")
        add_test(NAME "test_ceu_${test_name}_static" COMMAND "test_ceu_${test_name}_static")
        message(STATUS "CEU: Adding test test_ceu_${test_name}_static")
    endif()
endmacro()

ceu_add_test("stdio_printf_core" "${CMAKE_CURRENT_LIST_DIR}/ceu_cstd/ceu_stdio/test_printf_core.c")
ceu_add_test("ystr" "${CMAKE_CURRENT_LIST_DIR}/ceu_ystrlib/test_ystr.c")
ceu_add_test("pstdint" "${CMAKE_CURRENT_LIST_DIR}/misc/pstdint_test.c")
ceu_add_test("stdint" "${CMAKE_CURRENT_LIST_DIR}/ceu_cstd/stdint_test.c")
ceu_add_test("stdbool" "${CMAKE_CURRENT_LIST_DIR}/ceu_cstd/stdbool_test.c")
ceu_add_test("log" "${CMAKE_CURRENT_LIST_DIR}/misc/log_test.c")
